<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".view.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/picture_input"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                app:srcCompat="@drawable/shr_camera"
                android:contentDescription="@string/camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/shr_take_pictuce"
                android:textAppearance="?attr/textAppearanceCaption" />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_username">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_email">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_city">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/city_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shr_hint_description">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/description_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="10"
                    android:gravity="top|start"
                    android:scrollbars="vertical"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="24dp">

        <android.support.design.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/Widget.Shrine.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/shr_button_send" />

        <android.support.design.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.Shrine.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/next_button"
            android:text="@string/shr_button_cancel" />

    </RelativeLayout>
</RelativeLayout>
